# teletaxi-crm

./: .gitignore  .pnpmfile.cjs  CORRECTIF_sidecar_windows.md  INDEX.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  teletaxi_crm_frontend_FOUNDATIONS.md  teletaxi_crm_screens_GUIDE.md  teletaxi_crm_tauri_SPEC.md  tsconfig.tsbuildinfo
.github/workflows/: build-windows.yml
mockups_originaux/: 01_AuthScreen.jsx  02_DatabaseConfigScreen.jsx  03_ImportExcelScreen.jsx  04_HistoryScreen.jsx  05_SettingsScreen.jsx  06_DashboardScreen.jsx
python-sidecar/: build_sidecar.ps1  build_sidecar.sh  requirements.txt  sidecar_main.py  teletaxi-import.spec
scripts/: build_all_mac.sh  download_jre.ps1  download_jre.sh
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  config.rs  history.rs  mod.rs  sidecar.rs
src-tauri/src/db/: connection.rs  migrations.rs  queries.rs
src-tauri/src/sidecar/: process.rs  protocol.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/auth/: page.tsx
src/app/database/: page.tsx
src/app/history/: page.tsx
src/app/import/: page.tsx
src/app/settings/: page.tsx
src/components/: providers.tsx
src/components/layout/: layout-wrapper.tsx  sidebar.tsx
src/components/ui/: sheet.tsx
src/contexts/: auth-context.tsx
src/hooks/: use-auth-mutations.ts
src/lib/: schemas.ts  tauri.ts  types.ts  utils.ts
